--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-magnifying-glass",
+  "name": "reactjs-magnifying-glass",
   "version": "1.0.0",
   "description": "React component that zooms into any HTML element.",
   "main": "dist/cjs/index.js",
@@ -8,7 +8,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "rm -rf /dist && npm run build: cjs",
+    "build": "rm -rf /dist && npm run build:esm && npm run build:cjs",
     "build:esm": "tsc",
     "build:cjs": "tsc --module CommonJS --outDir dist/cjs",
     "storybook": "start-storybook -p 6006",
